# flu

./: pyproject.toml
eda/: eda linear.ipynb  eda_dummy.ipynb
ml_factory/: run001_svc_dummy.py  run002_svc_linear.py  run_dummy.py
ml_factory/eval/: evaluator.py
ml_factory/feature_importance/: __init__.py  feature_importance.py
ml_factory/models/architectures/: __init__.py  svc_factory.py
ml_factory/pipelines/common/: __init__.py  categorical.py  ordinal.py
ml_factory/pipelines/dummy/: preprocess.py
ml_factory/submission_factory/: __init__.py  submission_factory.py
