[tool.poetry]
name = "flu"
version = "0.1.0"
description = ""
authors = ["maarten.vdbul <maarten.vdbul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "==1.5.*"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
wandb = "^0.15.11"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

